# irdetect

classifier/: .cproject  .project  mainpage.dox  manifest.xml
classifier/src/: training.cpp
irdetect/: .cproject  .project  CMakeLists.txt  mainpage.dox  manifest.xml
irdetect/include/irdetect/: image_io.h  irdetect.h  sort_comp.h
irdetect/src/: DisplayImage.cpp  IRdetect.cpp  blob.cpp  blobfinal.cpp  contrast.cpp  diffusion.cpp  false_color.cpp  graylevels.cpp  histogram.cpp  importantvalue.cpp  meanvalue.cpp
irdetect/src/test/: testfalsecolor.cpp
